# Records

./: README.md  js_base  record_accesssibilityService  record_fragment  record_picture  record_retrofit2  record_rxjava2  record_rxjava2_操作符  record_servelet  record_sign  record_viewSize  record_webview  work_各种跳转  work_无障碍服务_一键扫描
Android/: AndoidManifest.txt  picasso源码分析.txt  使用gradle对apk的命名进行指定.txt  面向对象的6个准则.txt
Android/AndroidMainfest/: AndoidManifest组成.txt  applicationId和应用程序包名.txt  intentfilter.txt
Android/activity/: 启动模式的.txt
Android/adb/: adb命令.txt
Android/flavor和多渠道打包/: 使用flavor进行多分支的开发.txt  多渠道打包.txt
Android/gradle/: debug命令.txt
Android/gson/: 泛型实体类的解析.txt
Android/jni开发/: jni的创建.txt  jni调用简介.txt  使用extern_tool自动生成头文件.txt
Android/ndk开发/: CMakeLists.txt  buildExample.txt  项目ndk的配置.txt
Android/ndk开发/cmake/: CMakeLists.txt  buildexample.txt
Android/混淆/: 混淆文件.txt
Android/蓝牙/: 蓝牙读取数据失败的解决方法.txt  蓝牙读取数据时的结束判断.txt
c\c++/c++/: array.txt  c++基础.txt  运算符.txt
c\c++/c\c++环境/: c环境.txt
computer_base/: 计算机数据存储.txt
computer_base/网络基础/: 计算机网络基础.txt
c或c++/c++/: 变量和函数.txt  数组.txt
c或c++/c或c++环境/: 新建项目中cmake的文件设置.txt
flutter/: flutter的简介.txt
java/language/: java_genericArrayType.docx  java_genericDeclaration.docx  java_paramterizedType.docx  java_type.docx  java_typeVarible.docx  java_wildcardType.docx
js/: js跨域访问.txt
linux/ubuntu/: acer安装ubuntu_wifi问题.txt  ubuntu中删除snap包_避免卡死.txt
music/: 骑士王的荣耀五线谱.docx
python/language/: 数据类型.txt  比较操作符.txt  流程控制.txt  运算操作符.txt  逻辑运算.txt  默认为False.txt
sql/: orcal_record.txt
sql/orcal/: orcal数据库的建立.txt
计算机基础/: uri定义和格式.txt
